auto-install/home-cloud/mdns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-cloud-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-cloud
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdns
  namespace: home-cloud-system
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mdns
  template:
    metadata:
      labels:
        app: mdns
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        runAsNonRoot: true
      hostNetwork: true
      serviceAccountName: mdns
      containers:
        - name: mdns
          image: ghcr.io/home-cloud-io/core-platform-mdns:v0.0.2
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ['ALL']
          volumeMounts:
            - name: config
              mountPath: /etc/config.yaml
              subPath: config.yaml
      volumes:
        - name: config
          configMap:
            name: mdns
