auto-install/home-cloud/draft.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: draft-system
  labels:
    istio.io/dataplane-mode: ambient
# BLUEPRINT
---
kind: Service
apiVersion: v1
metadata:
  name: blueprint
  namespace: draft-system
spec:
  ports:
  - name: http
    port: 8090
  selector:
    app: blueprint
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blueprint
  namespace: draft-system
spec:
  serviceName: blueprint
  replicas: 1
  selector:
    matchLabels:
      app: blueprint
  template:
    metadata:
      labels:
        app: blueprint
    spec:
      containers:
        - name: blueprint
          image: ghcr.io/steady-bytes/draft-core-blueprint:v0.0.6
          ports:
            - name: grpc
              containerPort: 8090
              protocol: TCP
            - name: raft
              containerPort: 1111
              protocol: TCP
          volumeMounts:
          - name: config
            mountPath: /etc/config.yaml
            subPath: config.yaml
          - name: badger
            mountPath: /etc/badger/data
      volumes:
      - name: config
        configMap:
          name: blueprint
      - name: badger
        persistentVolumeClaim:
          claimName: blueprint
# FUSE
---
kind: Service
apiVersion: v1
metadata:
  name: fuse
  namespace: draft-system
spec:
  ports:
  - name: http
    port: 8090
  selector:
    app: fuse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fuse
  namespace: draft-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fuse
  template:
    metadata:
      labels:
        app: fuse
    spec:
      containers:
        - name: fuse
          image: ghcr.io/steady-bytes/draft-core-fuse:v0.0.6
          ports:
            - name: grpc
              containerPort: 8090
              protocol: TCP
          volumeMounts:
          - name: config
            mountPath: /etc/config.yaml
            subPath: config.yaml
      volumes:
      - name: config
        configMap:
          name: fuse
# ENVOY
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: draft-system
spec:
  type: NodePort
  ports:
    - port: 10000
      targetPort: 10000
      nodePort: 80
  selector:
    app: envoy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: draft-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.35.3
          imagePullPolicy: 'IfNotPresent'
          ports:
            - name: proxy
              containerPort: 10000
            - name: admin
              containerPort: 19000
            - name: als
              containerPort: 18090
          volumeMounts:
          - name: config
            mountPath: /etc/envoy/envoy.yaml
            subPath: envoy.yaml
      volumes:
      - name: config
        configMap:
          name: envoy
