auto-install/home-cloud/server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-cloud-system
---
kind: Service
apiVersion: v1
metadata:
  name: server
  namespace: home-cloud-system
spec:
  ports:
  - name: http
    port: 8090
  selector:
    app: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: home-cloud-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ghcr.io/home-cloud-io/core-platform-server:v0.0.52
          ports:
          - containerPort: 8090
          volumeMounts:
          - name: config
            mountPath: /etc/config.yaml
            subPath: config.yaml
      volumes:
      - name: config
        configMap:
          name: server
