auto-install/home-cloud/istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  # TODO: add https listener with self-signed cert provisioned by home-cloud server
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        # TODO: restrict this with a label selector?
        from: All
# default route to home-cloud server
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-cloud
  namespace: home-cloud-system
spec:
  parentRefs:
  - name: ingress-gateway
    namespace: istio-system
  hostnames: ["home-cloud.local"]
  rules:
  - backendRefs:
    - name: server
      port: 8090
